# 2face-or-not2face

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  Vagrantfile  data.csv  data2.csv  facerecognition  main.cpp  meds.gal  provision.sh  start_server.sh  stop_server.sh  test.ext
include/: docopt.h  eigen_matcher.h  face_matcher.h  fisher_matcher.h  helper.h  socket.h
src/: face_matcher.cpp  facerecognition.cpp  helper.cpp  main.cpp
